@@ -1,3 +1,7 @@
+2021-04-13
++ MINOR
+  - Offsets updated for FFXIV Patch 5.5 Global Version
+
 2021-04-08
 + MINOR
   - Updated offsets for Chinese version.
